#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2006 Mark Wong & Open Source Development Labs, Inc.
#

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = . src

EXTRA_DIST = \
storedproc/pgsql/pgsql/BrokerVolume.sql \
storedproc/pgsql/pgsql/CustomerPosition.sql \
storedproc/pgsql/pgsql/DataMaintenance.sql \
storedproc/pgsql/pgsql/MarketFeed.sql \
storedproc/pgsql/pgsql/MarketWatch.sql \
storedproc/pgsql/pgsql/SecurityDetail.sql \
storedproc/pgsql/pgsql/TradeCleanup.sql \
storedproc/pgsql/pgsql/TradeLookup.sql \
storedproc/pgsql/pgsql/TradeOrder.sql \
storedproc/pgsql/pgsql/TradeResult.sql \
storedproc/pgsql/pgsql/TradeStatus.sql \
storedproc/pgsql/pgsql/TradeUpdate.sql \
scripts/gen_html.sh \
scripts/mix_analyzer.pl \
scripts/run_workload.sh.in \
scripts/sysstats.sh.in \
scripts/transform_iostat.pl \
scripts/transform_sar.sh.in \
scripts/trtps.input \
scripts/vmplot.sh \
scripts/pgsql/analyze_stats.pl \
scripts/pgsql/backup.sh \
scripts/pgsql/check_db.sh \
scripts/pgsql/create_db.sh \
scripts/pgsql/create_indexes.sh \
scripts/pgsql/create_tables.sh \
scripts/pgsql/db_stat.sh.in \
scripts/pgsql/drop_db.sh \
scripts/pgsql/drop_tables.sh \
scripts/pgsql/load_stored_procs.sh \
scripts/pgsql/pgsql_profile.in \
scripts/pgsql/restore.sh \
scripts/pgsql/start_db.sh \
scripts/pgsql/stop_db.sh
