#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2006 Mark Wong & Open Source Development Labs, Inc.
#

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = . src

bin_SCRIPTS = \
	scripts/dbt5-generate-report \
	scripts/dbt5-post-process \
	scripts/dbt5-sysstats \
	scripts/dbt5-get-os-info \
	scripts/dbt5-run-workload \
	scripts/pgsql/dbt5-pgsql-backup-db \
	scripts/pgsql/dbt5-pgsql-build-db \
	scripts/pgsql/dbt5-pgsql-check-db \
	scripts/pgsql/dbt5-pgsql-create-db \
	scripts/pgsql/dbt5-pgsql-create-indexes \
	scripts/pgsql/dbt5-pgsql-create-tables \
	scripts/pgsql/dbt5-pgsql-db-plans \
	scripts/pgsql/dbt5-pgsql-db-stat \
	scripts/pgsql/dbt5-pgsql-drop-db \
	scripts/pgsql/dbt5-pgsql-drop-tables \
	scripts/pgsql/dbt5-pgsql-load-stored-procs \
	scripts/pgsql/dbt5-pgsql-restore-db \
	scripts/pgsql/dbt5-pgsql-start-db \
	scripts/pgsql/dbt5-pgsql-stop-db

EXTRA_DIST = \
	README-POSTGRESQL \
	examples \
	scripts \
	src/egen/ChangeLog.txt \
	src/egen/EULA.htm \
	src/egen/EULA.txt \
	src/egen/TestHarness \
	src/egen/flat_in \
	src/egen/inc \
	src/egen/prj \
	src/egen/src \
	src/include \
	storedproc
